--- a/product-service/package.json
+++ b/product-service/package.json
@@ -11,12 +11,18 @@
   },
   "dependencies": {
     "@middy/core": "^3.4.0",
-    "@middy/http-json-body-parser": "^3.4.0"
+    "@middy/http-error-handler": "^4.2.6",
+    "@middy/http-json-body-parser": "^3.4.0",
+    "@middy/validator": "^4.2.6",
+    "aws-sdk": "^2.1328.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
+    "@types/aws-sdk": "^2.7.0",
     "@types/node": "^14.14.25",
+    "@types/uuid": "^9.0.1",
     "esbuild": "^0.14.11",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
